# web-cat

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/cat_api/: main.py
apps/api/src/cat_api/api/routes/: demo.py  documents.py  glossary.py  segments.py  spellcheck.py  translation_memory.py
apps/api/src/cat_api/core/: config.py
apps/api/src/cat_api/db/: session.py
apps/api/src/cat_api/models/: __init__.py  document.py  glossary.py  spellcheck.py  translation_memory.py
apps/api/src/cat_api/schemas/: demo.py  document.py  glossary.py  spellcheck.py  translation_memory.py
apps/api/src/cat_api/services/: demo_seed.py  glossary.py  import_export.py  segmentation.py  spellcheck.py  translation_memory.py
apps/api/tests/: conftest.py  test_demo_seed.py  test_documents.py  test_glossary.py  test_health.py  test_import_export.py  test_mvp_flow.py  test_request_limits.py  test_segmentation.py  test_segments.py  test_spellcheck.py  test_translation_memory.py
apps/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/frontend/scripts/: capture-demo.mjs  capture-screenshots.mjs
apps/frontend/src/app/: App.test.tsx  App.tsx  main.tsx
data/samples/: spellcheck-target-with-error.txt
data/samples/documents/: software-cat-source.txt
data/samples/glossaries/: software-cat-glossary.csv  software-cat-glossary.tbx
data/samples/translation-memory/: software-cat-memory.tmx
docs/: 00-wprowadzenie.md  01-stack-i-architektura.md  02-plan-etapow.md  03-model-danych.md  04-moduly-cat.md  05-notebooks-i-eksperymenty.md  06-api-kontrakty.md  07-devops-i-testy.md  08-mapa-laboratoriow.md  09-koncepcja-projektu-i-narzedzia.md
infra/docker/: api.Dockerfile  frontend.Dockerfile
libs/shared/contracts/: openapi.yaml
libs/shared/types/: api.ts
scripts/: dev.ps1
tests/e2e/: editor.spec.ts  playwright.ts
(+12 files in other folders)
